[package]
name = "tokio-serial"
version = "4.3.3"
authors = ["Zac Berkowitz <zac.berkowitz@gmail.com>"]
description = "A serial port implementation for tokio"
license = "MIT"
homepage = "https://github.com/berkowski/tokio-serial"
repository = "https://github.com/berkowski/tokio-serial"
documentation = "http://docs.rs/tokio-serial"
readme = "README.md"
keywords = ["rs232", "serial", "tokio"]
categories = ["asynchronous", "hardware-support"]
edition = "2018"

[badges]
appveyor = { repository = "berkowski/tokio-serial", service = "github" }
travis-ci = { repository = "berkowski/tokio-serial", service = "github" }

[features]
default = ["libudev"]
libudev = ["mio-serial/libudev"]

[dependencies]
tokio = { version = "0.2", features = ["io-driver"], default-features = false }
mio-serial = { version = "3.3", default-features = false }

[dev-dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["macros"], default-features = false }
tokio-util = { version = "0.3", features = ["codec"], default-features = false }
bytes = "0.5"


[[example]]
name = "serialRecvSend"
path = "examples/serial_println.rs"
